<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginPage"
    android:background="@drawable/back2" >

    <EditText
        android:id="@+id/email_Field_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_desc"
        android:drawableLeft="@drawable/name26"
        android:textAlignment="center" 
        android:textColor="#FF0000"
        android:textCursorDrawable="@null"
        android:textStyle="bold">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_Field_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_Field_loginPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_desc"
        android:drawableLeft="@drawable/password126"
        android:layout_marginLeft="15dp"
        android:gravity="top"
        android:textColor="#FF0000" 
        android:textCursorDrawable="@null"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginPageInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_Field_loginPage"
        android:layout_alignLeft="@+id/password_Field_loginPage"
        android:layout_marginBottom="85dp"
        android:text="@string/enter_credentials"
        android:textStyle="bold"
        android:typeface="serif"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_Field_loginPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" 
        android:background="@drawable/cook2"/>

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        
        android:background="@drawable/forgot" />

</RelativeLayout>
