
<!-- <ScrollView 
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layout1" > -->
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cupcake3" >

<FrameLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/border_signupform" >

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginRight="5dp" >

            <EditText
                android:id="@+id/emailField"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/emailAddress"
                android:inputType="textEmailAddress"
                android:textStyle="bold" 
                android:textCursorDrawable="@null"
                android:textColor="#FF0000"
                android:drawableLeft="@drawable/email26">

                
            </EditText>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginRight="5dp" >

            <!--
                 <ImageView
                android:id="@+id/password_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/password_logo"
                android:contentDescription="@string/password_desc" />
            -->

            <EditText
                android:id="@+id/password_field"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FF0000" 
                android:textCursorDrawable="@null"
                android:textStyle="bold"
                android:drawableLeft="@drawable/password126" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/firstNameSign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="Enter First Name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@null"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:drawableLeft="@drawable/name26" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/lastNameSign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="Enter Last Name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@null"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:drawableLeft="@drawable/name26"  />
        
        <!-- <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" /> -->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical" >
    
    
    <FrameLayout
        android:id="@+id/foodPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/veg"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/nonveg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/nonveg"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1.45"
                android:text="@string/both" 
                android:textStyle="bold"/>
        </RadioGroup>
    </FrameLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="230dp"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/genderPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.10"
                        android:text="Female" 
                        android:textStyle="bold"
                        />

                </RadioGroup>
            </FrameLayout>

            

        </LinearLayout>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="vertical"
                android:layout_marginTop="270dp" >
            </LinearLayout>



   <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout> -->


</FrameLayout></ScrollView>
 <!-- </ScrollView> -->